talos/manifests/hubble-ui-ingress.yaml
# manifests/hubble-ui-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui-ingress
  namespace: kube-system  # L'IngressRoute doit être dans le même namespace que le service qu'il cible
spec:
  entryPoints:
    - websecure
    - web # On ajoute aussi le http pour le premier test
  routes:
    - match: Host(`hubble.truxonline.com`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
